<resources>
    <string name="app_name">One</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lists">ListsActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="enter_keywords">Enter keywords to find influencers</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="search_history">Search History</string>
    <string name="clear_caps">CLEAR</string>
    <string name="popular_keywords">Popular Keywords</string>
    <string name="travel">travel</string>
    <string name="lifestyle">lifestyle</string>
    <string name="food">food</string>
    <string name="beauty">beauty</string>
    <string name="fashion">fashion</string>
    <string name="sports">sports</string>
    <string name="cars">cars</string>
    <string name="log_in_with_caps">LOG IN WITH</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="username_no_caps">username</string>
    <string name="create_new_influencer_list">Create New Influencer List</string>
    <string name="search_button">Search Button</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="back">Back</string>
    <string name="search_tags">Search Tags</string>
    <string name="close_caps">CLOSE</string>
    <string name="search_results">Search Results</string>
    <string name="more_filters">More Filters</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="location">Location</string>
    <string name="followers">Followers</string>
    <string name="engagement_rate">Engagement Rate</string>
    <string name="confirm">Confirm</string>
    <string name="city_or_country">City or Country</string>
    <string name="filters">Filters</string>
    <string name="set_threshold">Set Threshold</string>
    <string-array name="follower_thresholds">
        <item>1k</item>
        <item>2k</item>
        <item>5k</item>
        <item>10k</item>
        <item>20k</item>
        <item>50k</item>
        <item>100k</item>
        <item>200k</item>
        <item>500k</item>
        <item>1m</item>
        <item>2m</item>
        <item>5m</item>
    </string-array>
    <string-array name="engagement_thresholds">
        <item>0.5 %</item>
        <item>1 %</item>
        <item>2 %</item>
        <item>3 %</item>
        <item>4 %</item>
        <item>5 %</item>
        <item>10 %</item>
    </string-array>
    <string name="title_activity_influencer">InfluencerActivity</string>

    <string name="title_section1">Profile</string>
    <string name="title_section2">Popular</string>
    <string name="title_section3">Recent</string>
    <string name="posts">Posts</string>
    <string name="top_tags">Top Tags</string>
    <string name="top_locations">Top Locations</string>
    <string name="top_20_following_caps">TOP 20 FOLLOWING</string>
    <string name="avg_likes">Avg. Likes</string>
    <string name="engagement">Engagement</string>
    <string name="profile_settings">Settings</string>
    <string name="sample_text">Sample</string>
    <string name="sample_num">100</string>

</resources>
