<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/topbarbg"
    android:paddingEnd="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="20dp"
    android:paddingStart="10dp">

    <ImageButton
        android:id="@+id/profileBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_back"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/profileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/username_no_caps"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/profileMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/ic_more"
        android:contentDescription="@string/profile_settings" />

</RelativeLayout>