<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/topbarbg"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/resultsSearchNameL"
        android:text="@string/search_tags"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/resultsSearchResultsL"
        android:text="@string/search_results"
        android:layout_centerInParent="true"
        android:gravity="bottom"
        android:textColor="#b2ffffff"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:id="@+id/resultsCloseL"
        android:gravity="center_vertical"
        android:layout_marginRight="15dp"
        android:textColor="#b2ffffff"
        android:text="@string/close_caps"
        android:layout_centerVertical="true"/>

</RelativeLayout>