<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fullbg">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:id="@+id/loginBackground">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_with_caps"
            android:id="@+id/loginTitle"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/loginInstagramLogo"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:fontFamily="sans-serif-medium"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginInstagramLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:src="@drawable/img_instagram"
            android:background="#00000000"
            android:layout_above="@+id/loginOrSeparator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="18sp"
            android:id="@+id/loginOrSeparator"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:gravity="center_vertical|center|center_horizontal" />

        <EditText
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginEmailAddress"
            android:layout_below="@id/loginOrSeparator"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:paddingLeft="10dp"
            android:hint="@string/email"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:background="#28000000"/>

        <EditText
            android:layout_width="240dp"
            android:layout_height="28dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:layout_below="@id/loginEmailAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:paddingLeft="10dp"
            android:hint="@string/password"
            android:textColorHint="#ffffff"
            android:background="#28000000" />

        <Button
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:text="@string/sign_in"
            android:id="@+id/loginSignInButton"
            android:layout_below="@+id/loginPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textColor="#ffffff"
            android:background="#AA3DA69E" />

    </RelativeLayout>

</LinearLayout>