<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="24dp"
    android:background="#fafafa"
    android:orientation="vertical"
    tools:context="com.clarity.one.app.FilterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#f4f4f4"
        android:orientation="horizontal"
        android:paddingLeft="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            android:textColor="#de000000"
            android:text="@string/location"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#f4f4f4"
        android:orientation="horizontal"
        android:paddingLeft="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            android:textColor="#de000000"
            android:text="@string/followers"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#f4f4f4"
        android:orientation="horizontal"
        android:paddingLeft="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_location"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:textSize="16sp"
            android:textColor="#de000000"
            android:text="@string/engagement_rate"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>
