<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.clarity.one.app.ListsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/halfbg"
        android:elevation="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="5dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageButton
                android:id="@+id/listsSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_setting" />

            <TextView
                android:id="@+id/listsUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/username_no_caps"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/listsProfilePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_influencer_dummy" />


        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="#fafafa"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <ListView
            android:id="@+id/listsListView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:listitem="@android:layout/simple_list_item_1">


        </ListView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#cccccc" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="15dp">

            <RelativeLayout
                android:id="@+id/listsCreateListRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/listsCreateList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_createlist"
                    android:contentDescription="@string/create_new_influencer_list" />

                <TextView
                    android:id="@+id/listsCreateListTV"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/listsCreateList"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/listsCreateList"
                    android:layout_toRightOf="@id/listsCreateList"
                    android:text="@string/create_new_influencer_list"
                    android:textSize="16sp" />
            </RelativeLayout>

            <ImageButton
                android:id="@+id/listsSearch"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/floating_button"
                android:contentDescription="@string/search_button" />


        </RelativeLayout>


    </LinearLayout>

</LinearLayout>